# JonTrain

./: .gitignore  License.txt  README.md  Readme.md  buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  ios-build.yml
